[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leaderboard"
version = "0.1.0"
description = "A CLI tool for submitting kernel files to BackendBench"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "requests>=2.28.0",
    "rich>=13.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pyjwt>=2.8.0",
    "httpx>=0.25.0",
]

[project.scripts]
leaderboard = "leaderboard.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.setuptools.packages.find]
include = ["leaderboard*"]
exclude = ["server*", "examples*"]

